--- a/tree-trimming.html
+++ b/tree-trimming.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=no">
     <title>
-        Trimming | Trusted Lawn Care Services in Lakeland, FL
+        Tree Trimming services in lakeland, fl | Trusted Tree Trimming services in lakeland, fl Services in Lakeland, FL
     </title>
 
     <meta name="description" content="">
@@ -46,8 +46,8 @@
                             </p>
                         </div>
                         <a class="text-decoration-underline text-white" title="LFTGU Lawn care Reviews" target="_blank"
-                            href="">
-                            (12 Rating &
+                            href="https://www.facebook.com/landscapingfromthegroundupLLC/reviews">
+                            (14 Rating &
                             Reviews)</a>
                     </div>
 
@@ -74,7 +74,8 @@
                                 Lakeland, FL <br>
 
                                 <a title="LFTGU Lawn care Location" class="text-decoration-underline fw-400 fs-18"
-                                    target="_blank" href="">Get
+                                    target="_blank"
+                                    href="https://www.google.com/maps/place/Kathleen+Rd,+Lakeland,+FL+33810,+USA/@28.0993838,-82.0068839,17z/data=!3m1!4b1!4m6!3m5!1s0x88dd47013863653d:0x173c116da95c1a0!8m2!3d28.0993791!4d-82.004309!16s%2Fg%2F1tq6kwy1?entry=ttu">Get
                                     Directions
                             </span>
                             </a>
@@ -87,7 +88,7 @@
                     <div class="text-md-end">
                         <a class="phone fw-500 gap-2" title="phone number" href="tel:+18138093317">
                             <i class="fa-solid fa-phone-volume fs-24"></i>
-                            +1 813-809-3317
+                            +1 (813) 809-3317
                         </a>
                     </div>
                 </div>
@@ -133,26 +134,30 @@
                             </li>
                             <!-- Second Navigation -->
                             <li class="nav-item">
-                                <a class="nav-link" title="Lawn Services" href="/">Lawn Services</a>
+                                <a class="nav-link" title="Lawn Services"
+                                    href="/lawn-care-services-lakeland-fl.html">Lawn Care Services</a>
                             </li>
 
                             <!-- Third Navigation -->
                             <li class="nav-item">
-                                <a class="nav-link" title="Mulching" href="/lawn-mulching.html">
-                                    Mulching
+                                <a class="nav-link" title="Trimming" href="/tree-trimming.html">
+                                    Tree Trimming services
                                 </a>
                             </li>
 
+
                             <!-- Fourth Navigation -->
+
                             <li class="nav-item">
-                                <a class="nav-link" title="Mowing" href="/lawn-mowing.html">Mowing</a>
+                                <a class="nav-link" title="Residental services"
+                                    href="/mowing-services-lakeland.html">Residental services</a>
                             </li>
+
 
                             <!-- Fifth Navigation -->
                             <li class="nav-item">
-                                <a class="nav-link" title="Trimming" href="/tree-trimming.html">
-                                    Trimming
-                                </a>
+                                <a class="nav-link" title="Commercial services"
+                                    href="/mowing-services-lakeland.html">Commercial services</a>
                             </li>
 
                             <!-- Sixth Navigation -->
@@ -182,7 +187,7 @@
 
 
                 <h1 class="text-center">
-                    Expert Trimming
+                    Expert <span class="text-primary">Tree Trimming</span>
                     Services in Lakeland, FL
                 </h1>
 
@@ -194,7 +199,7 @@
                         <!-- Call Now Button -->
                         <a title="Call Now to Learn More"
                             class="btn btn-primary rounded-1 fs-19 text-uppercase px-5 fw-600 mb-sm-0 mb-4"
-                            href="tel:+18138093317">+1 813-809-3317</a>
+                            href="tel:+18138093317">+1 (813) 809-3317</a>
 
                         <!-- Secondary Button -->
 
@@ -206,8 +211,9 @@
 
 
         <!-- Background Image behind hero sections -->
-        <img class="hero-img" src="/img/why-us-img.jpg" alt="Our Lawn Services">
+        <img class="hero-img" src="/img/tree-trimming.PNG" alt="Our Lawn Services">
     </section>
+
 
 
 
@@ -217,22 +223,21 @@
             <div class="about-us-flex align-items-center">
                 <!-- Information Side -->
                 <div class="info-div">
-                    <p class="sub-header">Best Trimming service</p>
+                    <p class="sub-header">reliable Tree trimming services</p>
                     <h2 class="header">
-                        Expert Trimming Services In <br>Lakeland, FL
+                        <span class="text-primary"> Tree Trimming </span>
+                        Services that Make Your Lawn look fresh
                     </h2>
                     <p class="mb-4">
 
-                        Welcome to LFTGU Lawn Care, where we provide expert trimming services in Lakeland, FL. Our goal
-                        is to make your lawn look great. We focus on doing the job right and making sure you're happy
-                        with our work. Welcome to LFTGU Lawn Care, where we provide expert trimming services in
-                        Lakeland, FL. Our goal is to make your lawn look great. We focus on doing the job right and
-                        making sure you're happy with our work.
+                        For professional tree trimming services that make your lawn look fresh, turn to us. At Tree
+                        Trimming Services, we're dedicated to enhancing your yard's appearance. Whether it's shaping
+                        trees, clearing branches, or keeping trees healthy, we handle it all with skill.
                         <br><br>
-                        Our team is friendly and professional, ready to help you with trimming, edging, and other
-                        services to keep your lawn healthy and beautiful. Whether you need regular maintenance or just a
-                        one-time trim, LFTGU Lawn Care is here to help. Trust us to take care of your lawn all year
-                        long.
+                        Our team aims for excellent results to keep your lawn looking its best. Relax and enjoy your
+                        outdoor space knowing it's in good hands. Contact us today at <a href="tel:+18138093317"
+                            class="text-decoration-underline" title="LFTGU Lawn care Contact Info">+1 (813) 809-3317</a>
+                            to see how we can help maintain your trees and beautify your lawn!
                     </p>
                     <a title="Call LFTGU Lawn care Now" class="btn btn-primary rounded-1 px-5 fs-20 fw-600"
                         href="tel:+18138093317">
@@ -242,7 +247,7 @@
 
                 <!-- Img Side -->
                 <div class="img-div top-right">
-                    <img style="object-position: top;" src="/img/why-us-img.jpg" alt="Our Lawn Services">
+                    <img style="object-position: top;" src="/img/tree-trimming.PNG" alt="Our Lawn Services">
 
                     <!-- <div class="img-data data-bottom-left">
                         <p class=" highlight">Keith Dorr</p>
@@ -252,221 +257,6 @@
             </div>
         </div>
     </section>
-
-
-
-
-
-    <!-- Service Areas -->
-    <section class="service-areas position-relative py-5 primary-overlay" id="service-areas">
-        <img style="object-position: bottom;" class="bg-img" src="/img/checking-garden.png"
-            alt="LFTGU Lawn care Service Areas">
-        <div class="container" data-aos="fade-up">
-            <div class="">
-                <h3 class="header text-center text-white">
-                    Our Service Areas
-                </h3>
-
-                <p class="text-center text-white">
-                    We proudly serve the following areas in Georgia:
-                </p>
-
-                <!-- Cities List -->
-                <ul class="cities pb-4">
-                    <li>
-                        <a title=" Lakeland, FL Lawn Services" href="/lawn-services-near-austell-ga.html">
-                            Lakeland, FL
-                        </a>
-                    </li>
-
-                    <li>
-                        <a title=" Douglassville, GA Lawn Services" href="/douglassville-lawn-services.html">
-                            Douglassville, GA
-                        </a>
-                    </li>
-
-                    <li>
-                        <a title=" Hiram, GA Lawn Services" href="/hiram-lawn-services.html">
-                            Hiram, GA
-                        </a>
-                    </li>
-
-                    <li>
-                        <a title="Lithia Springs, GA Lawn Services" href="/lithia-springs-lawn-services.html">
-                            Lithia Springs, GA
-                        </a>
-                    </li>
-
-                    <li>
-                        <a title=" Mableton, GA Lawn Services" href="/mableton-lawn-services.html">
-                            Mableton, GA
-                        </a>
-                    </li>
-
-                    <li>
-                        <a title="Marietta, GA Lawn Services" href="/marietta-lawn-services.html">
-                            Marietta, GA
-                        </a>
-                    </li>
-
-                    <li>
-                        <a title="Powder Springs, GA Lawn Services" href="/powder-springs-lawn-services.html">
-                            Powder Springs, GA
-                        </a>
-                    </li>
-
-                    <li>
-                        <a title="Smyrna, GA Lawn Services" href="/smyrna-lawn-services.html">
-                            Smyrna, GA
-                        </a>
-                    </li>
-
-                </ul>
-                <!-- CTA -->
-                <div class="d-flex justify-content-center mt-4">
-                    <a title="Call Now" class="btn btn-primary px-5 fs-19" href="tel:+18138093317">Call Now</a>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Testimonials -->
-    <section class="testimonials">
-        <div class="flex container">
-            <div class="headline-side">
-                <p class="sub-header">What some of our happy customers are saying...</p>
-                <h3 class="header">Clients Testimonials</h3>
-                <p>
-                    See what our satisfied customers have to say about their experiences at LFTGU Lawn care Lawn Care.
-                    From
-                    professionalism to affordable prices, our clients share their stories:
-                </p>
-                <div class="d-flex gap-2 flex-wrap mt-4">
-                    <a title="LFTGU Lawn care Phone Number" class="btn btn-primary rounded-1 px-5 fs-20 fw-600"
-                        href="tel:+18138093317">
-                        Call Now </a>
-                    <a title="LFTGU Lawn care Reviews" class="btn btn-outline-primary rounded-1 px-5 fs-20 fw-600"
-                        href="">
-                        Read All Reviews
-                    </a>
-                </div>
-            </div>
-            <div class="testimonials-slider">
-                <div class="testimonial">
-                    <div class="testimonial-overview">
-                        <div class="testimonial-conclusion">
-                            <img class="review-icon " src="/img/review-ladies.png" alt="">
-                            <h5>Very Professional</h5>
-                            <p class="ratings">
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </p>
-                        </div>
-                        <div class="platform-name">
-                            <p><i class="fa-brands fa-google"></i>Google</p>
-                        </div>
-                    </div>
-                    <p class="comment">
-                        They are amazing! They work with you on any issue you may have, their prices are reasonable and
-                        they are very honest and good people. I've had them one week show up to mow (I'm on a every
-                        other week schedule) and my yard truly didnt need it. instead of wasting and taking my money
-                        they messaged me to ask if I really wanted them to mow because he didnt look as though it needed
-                        it. I appreciate that so much! Very professional and easy to get a hold of!
-                    </p>
-                    <p class="name">
-                        Ashley Benjamin
-                    </p>
-                </div>
-
-                <div class="testimonial">
-                    <div class="testimonial-overview">
-                        <div class="testimonial-conclusion">
-                            <img class="review-icon " src="/img/review-ladies.png" alt="">
-                            <h5>Helpfull</h5>
-                            <p class="ratings">
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </p>
-                        </div>
-                        <div class="platform-name">
-                            <p><i class="fa-brands fa-google"></i>Google</p>
-                        </div>
-                    </div>
-                    <p class="comment">
-                        Daniel and Kyde were on time, under budget, and professional! We were looking for someone to
-                        trim our back hedge and called 5 other lawn care companies, none of which would even call us
-                        back. LFTGU came by just a few days after I spoke with them and now the hedge looks great, plus
-                        they took the time to speak with us and answer a few additional questions. We are extremely
-                        thankful to have found them!
-                    </p>
-                    <p class="name">
-                        Monica Hughes Fales
-                    </p>
-                </div>
-
-                <div class="testimonial">
-                    <div class="testimonial-overview">
-                        <div class="testimonial-conclusion">
-                            <img class="review-icon " src="/img/review-men.png" alt="">
-                            <h5>Great</h5>
-                            <p class="ratings">
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </p>
-                        </div>
-                        <div class="platform-name">
-                            <p><i class="fa-brands fa-google"></i>Google</p>
-                        </div>
-                    </div>
-                    <p class="comment">
-                        What a great company, daniel and his crew went above and beyond to do the work. Very
-                        knowledgeable of the business definitely would recommend. It hard to find top notch companies
-                        like this. Great communication very reasonable priced, even worked in the rain. Thank you
-                    </p>
-                    <p class="name">
-                        Doug Wood
-                    </p>
-                </div>
-
-                <div class="testimonial">
-                    <div class="testimonial-overview">
-                        <div class="testimonial-conclusion">
-                            <img class="review-icon " src="/img/review-men.png" alt="">
-                            <h5>Best Choice</h5>
-                            <p class="ratings">
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                            </p>
-                        </div>
-                        <div class="platform-name">
-                            <p><i class="fa-brands fa-google"></i>Google</p>
-                        </div>
-                    </div>
-                    <p class="comment">
-                        If you're looking for reliable, professional lawn care then LFTGU is the best choice. Super
-                        friendly and honest people. They always do an excellent job and go above and beyond. Schedule
-                        them to cut your lawn today!
-                    </p>
-                    <p class="name">
-                        Edith Hoops Dowell
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-
 
     <!-- Footer -->
     <footer class="position-relative pt-3">
@@ -484,11 +274,11 @@
                     <!-- Homepage Sections -->
                     <div class="footer-nav">
                         <p>
-                            Lakeland, FL <br>
-                            Lakeland, FL 30168
+                            Lakeland, FL <br> 30168
                             <br>
                             <a class="text-decoration-underline text-secondary" title="LFTGU Lawn care Directions"
-                                target="_blank" href="">
+                                target="_blank"
+                                href="https://www.google.com/maps/place/Kathleen+Rd,+Lakeland,+FL+33810,+USA/@28.0993838,-82.0068839,17z/data=!3m1!4b1!4m6!3m5!1s0x88dd47013863653d:0x173c116da95c1a0!8m2!3d28.0993791!4d-82.004309!16s%2Fg%2F1tq6kwy1?entry=ttu">
                                 Get Directions
                             </a>
                         </p>
@@ -532,7 +322,7 @@
                         <p>
                             Main: <a class="text-white" title="Main LFTGU Lawn care Phone Number"
                                 href="tel:+18138093317">
-                                +1 813-809-3317</a>
+                                +1 (813) 809-3317</a>
                         </p>
 
                     </div>
