--- a/contact-us.html
+++ b/contact-us.html
@@ -141,7 +141,7 @@
                             <!-- Third Navigation -->
                             <li class="nav-item">
                                 <a class="nav-link" title="Mulching"
-                                    href="/lawn-mulching.html">
+                                    href="/mulching-services-lakeland.html">
                                    Mulching
                                 </a>
                             </li>
@@ -149,7 +149,7 @@
                             <!-- Fourth Navigation -->
                             <li class="nav-item">
                                 <a class="nav-link" title="Mowing"
-                                    href="/lawn-mowing.html">Lawn Mowing</a>
+                                    href="/mowing-services-lakeland.html">Lawn Mowing</a>
                             </li>
 
                             <!-- Fifth Navigation -->
